infrastructure/sum-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sum-service
spec:
  type: ClusterIP
  selector:
    app: sum-server
  ports:
  - name: sum-server-port
    protocol: TCP
    port: 8001
    targetPort: 8001
