infrastructure/sum-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sum-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ict.project.test.info
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: sum-service
                port:
                  number: 8001
